Fixed text that wouldnt break when too long

--- a/nodes/public/stylesheets/style.css
+++ b/nodes/public/stylesheets/style.css
@@ -309,6 +309,11 @@ margin-bottom: 50px;
   color: #000000;
 }
 
+.autobreak {
+  word-break: break-all;
+}
+
+
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
 
